Minor style updates to stop things breaking so easily on mobile

--- a/css/floorplan-archive-defaults/_floorplan-grid-defaults.scss
+++ b/css/floorplan-archive-defaults/_floorplan-grid-defaults.scss
@@ -167,6 +167,11 @@
 		align-items: flex-start;
 		justify-content: flex-start;
 		gap: var(--rentfetch-space-xs);
+
+		@include mobile {
+			margin-top: var(--rentfetch-space-xs);
+			padding-top: var(--rentfetch-space-xs);
+		}
 	}
 
 	p.pricing {
@@ -175,7 +180,7 @@
 		margin: 0;
 
 		@include mobile {
-			font-size: var(--rentfetch-font-size-small);
+			font-size: var(--rentfetch-font-size-smallest);
 			line-height: 1.2;
 		}
 
@@ -205,7 +210,7 @@
 		margin: 0;
 
 		@include mobile {
-			font-size: var(--rentfetch-font-size-smallest);
+			font-size: clamp(11px, 0.6875rem + 0.1vw, 12px);
 			line-height: 1.25;
 		}
 	}
